2013-01-11  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/getopt_.h: Remove trailing CRs that crept in.

2013-01-11  Eli Zaretskii  <eliz@gnu.org>

	* lib/getopt_.h: Regenerate.

2013-01-10  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2013-01-09 stdlib: port to Solaris 2.6

2013-01-04  Glenn Morris  <rgm@gnu.org>

	* info/dir: Add htmlfontify.

2013-01-04  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2013-01-04 stdio: remove now-unnecessary stdio.c
	2013-01-04 fprintftime: depend on stdio, not ignore-value
	2013-01-04 fwrite: silence __wur only for older glibc versions
	2013-01-04 fwrite: silence __wur without using inline
	* lib/stdio.c: Remove.
	* lib/stdio.in.h, lib/strftime.c: Update from gnulib.
	* lib/gnulib.mk, m4/gnulib-comp.m4: Regenerate.

2013-01-02  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating copyright-date changes and:
	2012-12-31 dup2: work around cygwin bug

2012-12-30  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.ac: Check for GtkHandlebox.
	Check for GtkTearoffMenuItem.
	New enable: --enable-gtk-deprecation-warnings, default off.
	(HAVE_GTK3): If above enable is off, add
	-DGDK_DISABLE_DEPRECATION_WARNINGS to GTK_CFLAGS.

2012-12-30  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.ac (TEMACS_LDFLAGS2): Don't define.
	(LIBS_GNUSTEP): Set for GNUstep and substitute.
	(LD_SWITCH_SYSTEM_TEMACS): Don't set for GNUstep.

2012-12-27  Glenn Morris  <rgm@gnu.org>

	* configure.ac (emacs_config_options): New.
	Use $@ rather than undocumented $ac_configure_args.
	Replace any embedded double quotes.  (Bug#13274)

2012-12-27  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.ac (SIGNALS_VIA_CHARACTERS): Also define for darwin.
	(Bug#13222)

2012-12-26  Paul Eggert  <eggert@cs.ucla.edu>

	Revert static checking of stack smashing.
	* configure.ac (WARN_CFLAGS): Omit -Wstack-protector when
	configured with --enable-gcc-warnings.  -Wstack-protector causes